<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.method.test2.AddCompany">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_title_add_company"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/txt_name"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/historyText"
        android:layout_below="@+id/nameText"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginTop="28dp"
        android:text="@string/txt_history" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/informationText"
        android:layout_below="@+id/historyText"
        android:layout_alignLeft="@+id/historyText"
        android:layout_alignStart="@+id/historyText"
        android:layout_marginTop="27dp"
        android:text="@string/txt_information" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_record_add"
        android:id="@+id/button4"
        android:layout_marginTop="29dp"
        android:onClick="addRecord"
        android:layout_below="@+id/informationText"
        android:layout_alignLeft="@+id/informationText"
        android:layout_alignStart="@+id/informationText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_record_cancel"
        android:id="@+id/button5"
        android:onClick="cancelRecord"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp" />
</RelativeLayout>
